--- a/index.html
+++ b/index.html
@@ -5,53 +5,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/css.gg@2.0.0/icons/css/arrow-right.css' rel='stylesheet'>
     <title>Lab HTML5</title>
 </head>
 
 <body>
-    <section>
-        <a href="http://suszi.wszib.edu.pl">SUSZI</a>
-        <a href="http://sake.wszib.edu.pl">SAKE</a>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus est molestiae sequi magnam! Qui beatae,
-            ullam
-            repellat architecto consequuntur iure, ut laudantium similique libero quia magni, reprehenderit illum eaque
-            nostrum.</p>
-        <img src="image.jpg" alt="A Hong Kong urban taxi driving past a neon sign in Sham Shui Po, Hong Kong">
-        <table>
-            <thead>
-                <tr>
-                    <th>1</th>
-                    <th>2</th>
-                    <th>3</th>
-                    <th>4</th>
-                    <th>5</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>6</td>
-                    <td>7</td>
-                    <td>8</td>
-                    <td>9</td>
-                    <td>10</td>
-                </tr>
-                <tr>
-                    <td>11</td>
-                    <td>12</td>
-                    <td>13</td>
-                    <td>14</td>
-                    <td>15</td>
-                </tr>
-            </tbody>
-        </table>
-    </section>
-    <aside>
-        <ul>
-            <li><a href="http://suszi.wszib.edu.pl">SUSZI</a></li>
-            <li><a href="http://sake.wszib.edu.pl">SAKE</a></li>
-        </ul>
-    </aside>
-    <footer>Damian Tomalka</footer>
+    <div class="wrapper">
+        <section class="main">
+            <a class="button-3" href="http://suszi.wszib.edu.pl">SUSZI</a>
+            <a class="button-3" href="http://sake.wszib.edu.pl">SAKE</a>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus est molestiae sequi magnam! Qui beatae,
+                ullam
+                repellat architecto consequuntur iure, ut laudantium similique libero quia magni, reprehenderit illum eaque
+                nostrum.</p>
+            <img src="image.jpg" alt="A Hong Kong urban taxi driving past a neon sign in Sham Shui Po, Hong Kong">
+            <table class="styled-table">
+                <thead>
+                    <tr>
+                        <th>1</th>
+                        <th>2</th>
+                        <th>3</th>
+                        <th>4</th>
+                        <th>5</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>6</td>
+                        <td>7</td>
+                        <td>8</td>
+                        <td>9</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <td>11</td>
+                        <td>12</td>
+                        <td>13</td>
+                        <td>14</td>
+                        <td>15</td>
+                    </tr>
+                </tbody>
+            </table>
+            <footer class="footer">Damian Tomalka</footer>
+        </section>
+        <aside class="aside aside-1">
+            <ul>
+                <li><a href="http://suszi.wszib.edu.pl">SUSZI</a></li>
+                <li><a href="http://sake.wszib.edu.pl">SAKE</a></li>
+            </ul>
+        </aside>
+    </div>
 </body>
 
 </html>
